"prepublishOnly": "node ./script/prepublishOnly.js",

--- a/packages/semver/package.json
+++ b/packages/semver/package.json
@@ -29,7 +29,7 @@
     "test": "test"
   },
   "scripts": {
-    "prepublishOnly": "",
+    "prepublishOnly": "node ./script/prepublishOnly.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
